--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,28 @@
         })
     }
 
-function sortData() {
+function deleteData() {
+      UTdata.fetch()
+        .then(function(results) {
+          return results.delete();
+          })
+          .then(function(results){
+          $("#display").removeClass();
+          $("#display").addClass("bg-success");
+          $("#display").html("delete success");
+        })
+        .catch(function(error) {
+          $("#display").removeClass();
+          $("#display").addClass("bg-warning");
+          $("#display").html("delete fail:" + JSON.stringify(error));
+        })
+    }
+
+    function countData() {
+      $("#display").html("count does not work");
+    }
+
+   function sortData() {
       UTdata.order(key,true).fetchAll()
         .then(function(results) {
           let msg = "";
@@ -67,14 +88,6 @@ function sortData() {
           $("#display").addClass("bg-warning");
           $("#display").html("delete fail:" + JSON.stringify(error));
         })
-    }}
-
-    function countData() {
-      $("#display").html("count does not work");
-    }
-
-    function deleteData() {
-      $("#display").html("delete does not work");
     }
 
     function updateData() {
@@ -91,9 +104,9 @@ function sortData() {
   </div>
   <div>
     <a onclick="fetchAll()" class="btn btn-outline-secondary" role="buton">Fetch All</a>
-    <a onclick="sortData()" class="btn btn-outline-primary" role="button">Sort</a>
+    <a onclick="sortData()" class="btn btn-outline-secondary" role="button">Sort</a>
     <a onclick="countData()" class="btn btn-outline-primary" role="button">Count</a>
-    <a onclick="deleteData()" class="btn btn-outline-primary" role="buton">Delete</a>
+    <a onclick="deleteData()" class="btn btn-outline-secondary" role="buton">Delete</a>
   </div>
   <div>
     <input type="text" id="update" placeholder="更新">
