--- a/www/index.html
+++ b/www/index.html
@@ -14,13 +14,30 @@
     let UTdata = ncmb.DataStore("UpdateTest");
     let key = "score";
     
-    //let play="title";
+    let play ="songtitle";
 
 
     function enterData() {
       let uTdata = new UTdata();
       let value = parseInt($("#data").val());
-      uTdata.set(key, value)
+
+      let music = parseInt($("#title").val());
+
+
+      uTdata.set(key,value)
+        .save()
+        .then(function(results) {
+          $("#display").removeClass();
+          $("#display").addClass("bg-success");
+          $("#display").html("enter success");
+        })
+        .catch(function(results) {
+          $("#display").removeClass();
+          $("#display").addClass("bg-warning");
+          $("#display").html("enter fail");
+        })
+
+        uTdata.set(play,music)
         .save()
         .then(function(results) {
           $("#display").removeClass();
@@ -37,36 +54,24 @@
         }*/
     }
 
-  /*  function insaidData(){
-      let uTdata = new UTdata();
-      let value = parseInt($("#data").val());
-      uTdata.set(play, value)
-      .save()
-        .then(function(results) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-success");
-          $("#display").html("enter success");
-        })
-        .catch(function(results) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-warning");
-          $("#display").html("enter fail");
-        })
-        .setIncrement("title","score"){
-          
-        } 
-    }*/
  
     function fetchAll() {
       UTdata.fetchAll()
         .then(function(results) {
           let msg = "";
+
+          let ti="";
+
           for (let i = 0; i < results.length; i++) {
             msg += results[i].get(key) + "<br>";
+            ti += results[i].get(play)+ "<br>" ;
           }
           $("#display").removeClass();
           $("#display").addClass("text-light");
           $("#display").addClass("bg-primary");
+
+          $("#display").html(ti);
+
           $("#display").html(msg);
         })
         .catch(function(error) {
@@ -130,7 +135,11 @@ function deleteData() {
       UTdata.fetch()
         .then(function(results) {
           let value = parseInt($("#update").val());
-           results.set(key,value);
+
+          let music =parseInt($("#title").val());
+
+
+           results.set(key,value,music);
            return results.update();
           })
           .then(function(results){
@@ -144,20 +153,16 @@ function deleteData() {
           $("#display").html("delete fail:" + JSON.stringify(error));
         })
     }
+    //<a onclick="insaidData()" class="btn btn-outline-secondary" role="button">Enter</a>
   </script>
+  
 </head>
 
 <body>
   <h1 class="text-light bg-secondary">mbaas update</h1>
 
-
- <div>
-    <input type="text" id="title" placeholder="曲名">
-    <a onclick="insaidData()" class="btn btn-outline-secondary" role="button">Enter</a>
-  </div>
-
   <div>
-    <input type="text" id="data" placeholder="スコア">
+    <input type="text" id="title" placeholder="曲名"> <input type="text" id="data" placeholder="スコア">
     <a onclick="enterData()" class="btn btn-outline-secondary" role="button">Enter</a>
   </div>
 
